# HSO

./: CMakeLists.txt  README.md  build.sh
Sophus/: CMakeLists.txt
Sophus/sophus/: so2.cpp
include/hso/: CoarseTracker.h  ImageReader.h  IndexThreadReduce.h  MatrixAccumulator.h  bundle_adjustment.h  camera.h  config.h  depth_filter.h  feature.h  feature_alignment.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  initialization.h  map.h  matcher.h  point.h  pose_optimizer.h  reprojector.h  viewer.h
include/hso/vikit/: aligned_mem.h  homography.h  math_utils.h  patch_score.h  performance_monitor.h  ringbuffer.h  robust_cost.h  timer.h  vision.h
src/: CoarseTracker.cpp  ImageReader.cpp  bundle_adjustment.cpp  camera.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  viewer.cpp
src/vikit/: homography.cpp  math_utils.cpp  performance_monitor.cpp  robust_cost.cpp  vision.cpp
test/: euroc_batch.sh  icl-nuim_batch.sh  single_sequence.sh  test_dataset.cpp  tum_monoVO_batch.sh
test/cameras/: euroc.txt  icl-nuim.txt  tum_mono_vo_narrow.txt  tum_mono_vo_wide.txt
test/result/: KeyFrameTrajectory.txt
test/timestamp/: L0.txt  L3.txt  MH01.txt  MH02.txt  MH03.txt  MH04.txt  MH05.txt  O0.txt  O1.txt  O2.txt  V101.txt  V102.txt  V103.txt  V201.txt  V202.txt  V203.txt
